--- a/Lista 2/numero 10.html
+++ b/Lista 2/numero 10.html
@@ -30,7 +30,7 @@
     </p>
     <footer>
         Esse é o footer!<br>
-        <a href="https://twitter.com/jairbolsonaro?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Não clica</a></p>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Não clica</a></p>
     </footer>
 </body>
 </html>
